--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_base_app
-description: A new Flutter project.
+description: A base app for your flutter projects.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,6 +23,12 @@ dependencies:
   dio:
   shared_preferences:
   faker:
+  cloud_firestore: ^0.12.7+1
+  firebase_auth: ^0.11.1+3
+  google_sign_in: ^4.0.2
+  firebase_core: ^0.4.0+1
+  firebase_analytics: ^4.0.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
