--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_base_app
+name: grateful
 description: A base app for your flutter projects.
 
 # The following defines the version and build number for your application.
@@ -24,9 +24,10 @@ dependencies:
   shared_preferences:
   faker:
   cloud_firestore: ^0.12.7+1
-  firebase_auth: ^0.11.1+3
-  google_sign_in: ^4.0.2
-  firebase_core: ^0.4.0+1
+  firebase_auth: ^0.14.0+5
+  google_sign_in: ^4.0.7
+  firebase_core: ^0.4.0+9
+  firebase_storage: ^3.0.6
   firebase_analytics: ^4.0.2
   flutter_localizations:
     sdk: flutter
