--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter
   flutter_cupertino_localizations:
   intl:
+  meta:
   uuid:
+  image_picker:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
