--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 ios/Flutter/flutter_export_environment.sh
+ios/**/GoogleService-Info.plist
