--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cloud_firestore: ^0.12.7+1
   firebase_auth: ^0.14.0+5
   google_sign_in: ^4.0.7
+  url_launcher:
   firebase_core: ^0.4.0+9
   firebase_storage: ^3.0.6
   firebase_analytics: ^4.0.2
