--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_storage: ^3.0.6
   firebase_analytics: ^4.0.2
+  url_launcher:
   flutter_localizations:
     sdk: flutter
   flutter_cupertino_localizations:
@@ -37,6 +38,7 @@ dependencies:
   uuid:
   image_picker:
   carousel_slider: ^1.3.0
+  cached_network_image: ^1.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
