--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_storage: ^3.0.6
   firebase_analytics: ^4.0.2
+  firebase_messaging: ^5.1.6
   url_launcher:
   flutter_localizations:
     sdk: flutter
