fixes for images

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 ios/Flutter/flutter_export_environment.sh
 ios/**/GoogleService-Info.plist
+
+**/key.properties
