--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A base app for your flutter projects.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.2.0+100
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -45,10 +45,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+flutter_icons:
+  image_path: "icon/icon.png"
+  android: true
+  ios: true
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl_translation: ^0.17.1
+  flutter_launcher_icons:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
