--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc:
+  bloc:
   dio:
   shared_preferences:
   faker:
@@ -39,9 +40,9 @@ dependencies:
   meta:
   uuid:
   image_picker:
-  carousel_slider: ^1.3.0
+  photo_view: ^0.7.0
   cached_network_image: ^1.1.2
-
+  rxdart:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
