--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc:
-  dio:
+  flutter_bloc: 3.0.0
   shared_preferences:
   faker:
   cloud_firestore: ^0.13.0+1
@@ -34,7 +33,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_cupertino_localizations:
-  intl:
+  intl: 0.16.0
   uuid:
 
   # The following adds the Cupertino Icons font to your application.
