--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_analytics: ^4.0.2
   firebase_messaging: ^5.1.6
   flutter_auth_buttons: ^0.6.0
+  google_fonts: 0.3.2
   url_launcher:
   flutter_localizations:
     sdk: flutter
