updated theme for consistency

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,14 @@
       "program": "lib/main_production.dart",
       "type": "dart",
       "args": ["--flavor", "production"]
+    },
+    {
+      "name": "Profile",
+      "request": "launch",
+      "program": "lib/main_production.dart",
+      "type": "dart",
+      "flutterMode": "profile",
+      "args": ["--flavor", "production"]
     }
   ]
 }
