--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,21 +19,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^3.1.0
+  flutter_bloc: ^3.2.0
   bloc:
   dio:
   shared_preferences:
   json_annotation:
   faker:
-  cloud_firestore: ^0.12.7+1
-  firebase_auth: ^0.14.0+5
-  google_sign_in: ^4.0.11
-  firebase_core: ^0.4.0+9
+  cloud_firestore: ^0.13.0+1
+  firebase_auth: ^0.15.4
+  google_sign_in: ^4.1.1
+  firebase_core: ^0.4.3+3
   firebase_storage: ^3.1.1
-  firebase_analytics: ^4.0.2
-  firebase_messaging: ^5.1.6
+  firebase_analytics: ^5.0.11
+  firebase_messaging: ^6.0.9
   flutter_auth_buttons: ^0.6.0
-  google_fonts: 0.3.2
+  google_fonts: 0.3.7
   url_launcher:
   sticky_headers: ^0.1.8+1
   flutter_localizations:
@@ -44,12 +44,12 @@ dependencies:
   uuid:
   share: ^0.6.3+5
   image_picker:
-  photo_view: ^0.7.0
+  photo_view: ^0.9.1
   cached_network_image: ^2.0.0
   rxdart:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 flutter_icons:
   image_path: "icon/icon.png"
