--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^0.3.9
   flutter_bloc: ^3.1.0
   shared_preferences:
   faker:
