--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,17 +20,17 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^0.3.9
-  flutter_bloc: ^3.1.0
+  flutter_bloc: ^3.2.0
   shared_preferences:
   faker:
-  cloud_firestore: ^0.13.0+1
-  firebase_auth: ^0.15.3
-  google_sign_in: ^4.1.1
+  cloud_firestore: ^0.13.4+1
+  firebase_auth: ^0.15.5+2
+  google_sign_in: ^4.1.4
   url_launcher:
-  firebase_core: ^0.4.3+1
-  firebase_storage: ^3.1.1
-  firebase_analytics: ^5.0.9
-  firebase_messaging: ^6.0.9
+  firebase_core: ^0.4.4+2
+  firebase_storage: ^3.1.3
+  firebase_analytics: ^5.0.11
+  firebase_messaging: ^6.0.12
   flutter_localizations:
     sdk: flutter
   flutter_cupertino_localizations:
